@@ -1,3 +1,8 @@
+2011-08-26  Mikael Morin  <mikael.morin@gcc.gnu.org>
+
+	PR fortran/50050
+	* gfortran.dg/pointer_comp_init_1.f90: New test.
+
 2011-08-26  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/50179
